navigation fixes, opencv functions fixed, multiple video resolution